# qdrant-101

./: README.md  docker-compose.yml  pyproject.toml  run-qdrant.sh
notebooks/: indexing_collections.ipynb  recommend_performance_check.ipynb  using_grpc.ipynb
