[tool.poetry]
name = "qdrant-101"
version = "0.1.0"
description = ""
authors = ["Michael Eichenseer <16592938+mymindwentblvnk@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "qdrant_101"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
qdrant-client = "^1.3.1"
jupyterlab = "^4.0.3"
scikit-learn = "^1.3.0"
ray = "^2.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
